# forex

./: Pasted-Failed-to-generate-prediction-for-1h-Unexpected-error-in-generate-prediction-for-EURUSD-on-1h-timef-1727109825950.txt  backtester.py  chart_visualizer.py  currency_pairs.json  data_fetcher.py  gerekrlilkutup  last_sent_signals.json  main.py  management_panel.py  news_sentiment.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  signal_generator.py  signals.json  technical_analysis.py  telegram_notifier.py  utils.py
.streamlit/: secrets.toml
pages/: detailed_analysis.py  detayeskikod  management_panel.py
